# domainer

./: .gitignore  README.md  pyproject.toml
data/: antler_final.json  ef_final.json  linkedin-2024-q2-sample.csv  test.csv  train.csv  val.csv  yc_final.json
docs/: 01_experiment_setup.md
domainer/: config.py  dataset.ipynb  utils.py
domainer/crawlers/: antler.ipynb  ef.ipynb  yc.ipynb
domainer/experiments/: dataset_evaluation.ipynb
