[tool.poetry]
name = "domainer"
version = "0.1.0"
description = ""
authors = ["Foxicution <foxicution@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.46.2"
datasets = "^3.1.0"
fastapi = "^0.115.5"
torch = "^2.5.1"
httpx = "^0.27.2"
lxml = "^5.3.0"
requests = "^2.32.3"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
